Fix hexagonal architecture violations in application layer
Co-authored-by: rajib-reea <135492408+rajib-reea@users.noreply.github.com>