@@ -16,8 +16,15 @@ public class VirtualThreadExecutorConfig {
 
     // Expose an Executor backed by virtual threads. Use this with Reactor's
     // `Schedulers.fromExecutor(virtualExecutor)` to offload blocking calls.
+    // Note: Falls back to cached thread pool for Java < 21
     @Bean("virtualExecutor")
     public Executor virtualExecutor() {
-        return Executors.newVirtualThreadPerTaskExecutor();
+        try {
+            // Try to use virtual threads if available (Java 21+)
+            return (Executor) Executors.class.getMethod("newVirtualThreadPerTaskExecutor").invoke(null);
+        } catch (Exception e) {
+            // Fall back to cached thread pool for Java < 21
+            return Executors.newCachedThreadPool();
+        }
     }
 }
